nutritionist page is no longer overlapping its containers

--- a/src/components/styles/nutrihome.css
+++ b/src/components/styles/nutrihome.css
@@ -1,15 +1,20 @@
 .cont-nutri {
     width: 100%;
+    height: 100%;
+    display: flex;
     margin: 0 auto;
 }
 
 .cont-nutri-inf {
-    margin: 10px;
-    min-height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    margin-right: 10px;
+    margin-left: 10px;
+    width: 50%;
+    overflow: hidden;
+}
+
+.cont-nutri-inf-right {
+    flex-grow: 1;
+    overflow: hidden;
 }
 
 .wrp-nutri-info {
@@ -19,8 +24,8 @@
     margin-right: 60%;
     border-radius: 5px;
     overflow: hidden;
-    width: 30%; 
-    float: left;
+    width: 70%;
+    height: 10%; 
     padding: 90px 55px 20px 55px;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5);
 }
@@ -28,11 +33,10 @@
 .wrp-m-info {
     background-color: rgba(253, 210, 130, 0.5);
     border-radius: 5px;
-    margin-top: -80%;
-    margin-left: 50%; 
-    height: 100%;
+    margin-top: 15px;
+    margin-left: 38%;
+    margin-bottom: 15px; 
     width: 30%;
-
     overflow: hidden;
     padding: 90px 55px 20px 55px;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5);
@@ -48,7 +52,6 @@
 }
 
 .patient {
-    display:block;
     text-align: center;
     background-color: #58692e;
     padding: 50px 100px 20px 100px;
@@ -56,13 +59,20 @@
 
 .patient-options {
     text-align: center;
-    margin-top: -65%;
     background-color: #FFFFFF;
     padding: 50px 100px 20px 100px;
 }
 
+.text-right {
+    font: 'DM Sans';
+    display: flex;
+    color: #58692e;
+    background-color: none;
+    padding: 0;
+    margin-top: 0;
+}
+
  .diet {
-    margin-top: -50%;
     text-align: center;
     background-color: #58692e;
     padding: 50px 100px 20px 100px;
@@ -70,7 +80,6 @@
 
 .diet-options {
     text-align: center;
-    margin-top: -35%;
     background-color: #FFFFFF;
     padding: 50px 100px 20px 100px;
 }
@@ -78,7 +87,6 @@
 
 .chat {
     text-align: center;
-    margin-top: -20%;
     background-color: #58692e;
     padding: 50px 100px 20px 100px;
 } 
@@ -86,8 +94,8 @@
 
 .icon img {
     object-fit: contain;
-    max-width:20%;
-    max-height:20%;
+    max-width:80%;
+    max-height:80%;
     border-radius: 45px;   
     margin-top: -50%;
     -ms-transform: translate(-20%, -20%);
@@ -123,8 +131,16 @@
     font-family: 'DM Sans';
 }
 
+.details-right {
+
+}
+
 .details-data {
     margin-top: -20%;
+}
+
+.details-data-p {
+    margin-top: -15%;
 }
 
 .patients {
@@ -186,3 +202,20 @@
 }
 
 
+.optionslink {  
+    color: rgba(88, 105, 46, 1);
+    font-family: 'DM Sans';
+    white-space: nowrap;
+    font-size: 15px;    
+    text-align: center;
+    display: block;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.optionslink:hover {
+    border-radius: 5px;
+    background: rgba(88, 105, 46, 0.5);
+    color: #FFFFFF;
+    transition: all 0.2s ease-in-out;
+}
